--- a/index.html
+++ b/index.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>HELLO WORLD</title>
+	<title>ChillyDogs | Home</title>
+	<link rel="stylesheet" href="main.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="icon" type="image/x-icon" href="hotdog.ico">
 </head>
 <body>
 	
 
-<h1> Hello World </h1>
 
+<ul>
+	<li id="home"> Home </li>
+	<a href="blog.html" target="_blank"><li id="blog"> Blog </li></a>
+	<a href="projects.html" target="_blank"><li id="projects"> Projects </li></a>
+</ul>
+
+<video controls loop>
+	<source src="entertainGod.mp4" type="video/mp4">
+</video>
 
 	
 </body>
