--- a/projects.html
+++ b/projects.html
@@ -11,8 +11,8 @@
 
 <ul>
 	<li id="projects"> Projects </li>
-	<a href="blog.html" target="_blank"><li id="blog"> Blog </li></a>
-	<a href="index.html" target="_blank"><li id="home"> Home </li></a>
+	<a href="blog.html"><li id="blog"> Blog </li></a>
+	<a href="index.html"><li id="home"> Home </li></a>
 </ul>
 
 <img src="clown.png" id="clown">
