--- a/blog.html
+++ b/blog.html
@@ -11,13 +11,12 @@
 
 <ul>
 	<li id="blog"> Blog </li>
-	<a href="projects.html" target="_blank"><li id="projects"> Projects </li></a>
-	<a href="index.html" target="_blank"><li id="home"> Home </li></a>
+	<a href="projects.html" ><li id="projects"> Projects </li></a>
+	<a href="index.html"><li id="home"> Home </li></a>
 </ul>
 
-<div>
-<h2> I don't know what to put here yet :| </h2>
-</div>
+
+<a href="thoughts-on-God.html" target="_blank"><h3 id="thoughts-on-God"> My Thoughts on God <br> 09/01/23</h3></a>
 
 </body>
 </html>
