--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
 <ul>
 	<li id="home"> Home </li>
-	<a href="blog.html" target="_blank"><li id="blog"> Blog </li></a>
-	<a href="projects.html" target="_blank"><li id="projects"> Projects </li></a>
+	<a href="blog.html"><li id="blog"> Blog </li></a>
+	<a href="projects.html"><li id="projects"> Projects </li></a>
 </ul>
 
 <video controls loop>
