--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
 </video>
 
 
-<img src="images/joe.png" id="sonic">
-<p id="sonic-text"> "Arfmhmh" </p>
+<img src="images/so-me.png" id="bladerunner">
+<p id="bladerunner-text"> Please stop collecting mental illness's like they're something to be proud of </p>
+
+<img src="images/me.jpg" id="me">
+<p id="me-text"> This is me, just felt like posting it here </p>
+
 </body>
 </html>
