--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <p id="bladerunner-text"> Please stop collecting mental illness's like they're something to be proud of </p>
 
 <img src="images/me.jpg" id="me">
-<p id="me-text"> This is me, just felt like posting it here </p>
+<p id="me-text"> I'm the one behind this shitpost </p>
 
 </body>
 </html>
