--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<li id="home"> Home </li>
 	<a href="BLOG/blog.html"><li id="blog"> Blog </li></a>
 	<a href="PROJECTS/projects.html"><li id="projects"> Projects </li></a>
+	<a href="STORE/store.html"><li id="store"> Store </li></a>
 </ul>
 
 <video controls loop>
@@ -25,7 +26,7 @@
 <p id="bladerunner-text"> Please stop collecting mental illness's like they're something to be proud of </p>
 
 <img src="images/me.jpg" id="me">
-<p id="me-text"> I'm the one behind this shitpost </p>
+<p id="me-text"> This is me, just felt like posting it here </p>
 
 </body>
 </html>
