--- a/PROJECTS/projects.html
+++ b/PROJECTS/projects.html
@@ -13,6 +13,7 @@
 	<li id="projects"> Projects </li>
 	<a href="../BLOG/blog.html"><li id="blog"> Blog </li></a>
 	<a href="../index.html"><li id="home"> Home </li></a>
+	<a href="../STORE/store.html"><li id="store">Store</li>
 </ul>
 
 <img src="clown.png" id="clown">
