--- a/STORE/store.html
+++ b/STORE/store.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>ChillyDogs | Home</title>
+	<title>ChillyDogs | Store</title>
 	<link rel="stylesheet" href="store.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" type="image/x-icon" href="hotdog.ico">
