--- a/STORE/store.html
+++ b/STORE/store.html
@@ -21,7 +21,8 @@
 <p id="discord-text"> For only $10, this could be yours. </p>
 <p id="discord-tag"> discord is: anon_esophagus </p>
 
+<p id="my-fiverr" onclick=fiver()> My Fiverr </p>
 
-
+<script src="store.js"></script>
 </body>
 </html>
