--- a/PROJECTS/projects.html
+++ b/PROJECTS/projects.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" href="projects.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" type="image/x-icon" href="hotdog.ico">
+	<meta name="robots" content="noindex, nofollow" />
 </head>
 <body>
 
@@ -13,7 +14,7 @@
 	<li id="projects"> Projects </li>
 	<a href="../BLOG/blog.html"><li id="blog"> Blog </li></a>
 	<a href="../index.html"><li id="home"> Home </li></a>
-	<a href="../STORE/store.html"><li id="store">Store</li>
+	<a href="../STORE/store.html"><li id="store">Store</li></a>
 </ul>
 
 <img src="clown.png" id="clown">
