--- a/STORE/store.html
+++ b/STORE/store.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" href="store.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" type="image/x-icon" href="hotdog.ico">
+	<meta name="robots" content="noindex, nofollow" />
 </head>
 <body>
 
@@ -19,9 +20,14 @@
 
 <img src="images/BEHOLD.png" id="discord-image">
 <p id="discord-text"> For only $10, this could be yours. </p>
-<p id="discord-tag"> discord is: anon_esophagus </p>
+<p id="discord-tag"> discord tag: <br><span style="color:red">anon_esophagus</span></p>
 
-<p id="my-fiverr" onclick=fiver()> My Fiverr </p>
+
+
+<p id="fiverr" onclick="Fiverr()"> My Fiverr </p>
+
+
+
 
 <script src="store.js"></script>
 </body>
