--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
 <head>
 	<title>ChillyDogs | Home</title>
 	<link rel="stylesheet" href="main.css">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" type="image/x-icon" href="hotdog.ico">
+	
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="This is my blog where I rant about things such as 4chan. I also have a store where I offer my coding technology services.">
+	<meta name="robots" content="index, follow" />
+	
 </head>
 <body>
 	
