--- a/STORE/store.html
+++ b/STORE/store.html
@@ -4,7 +4,7 @@
 	<title>ChillyDogs | Store</title>
 	<link rel="stylesheet" href="store.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="icon" type="image/x-icon" href="hotdog.ico">
+	<link rel="icon" type="image/x-icon" href="../hotdog.ico">
 	<meta name="robots" content="noindex, nofollow" />
 </head>
 <body>
@@ -19,7 +19,7 @@
 
 
 <img src="images/BEHOLD.png" id="discord-image">
-<p id="discord-text"> For only $10, this could be yours. </p>
+<p id="discord-text"> For only <span style="color:rgb(21, 255, 0)">$5</span>, this could be yours. </p>
 <p id="discord-tag"> discord tag: <br><span style="color:red">anon_esophagus</span></p>
 
 
