--- a/STORE/store.html
+++ b/STORE/store.html
@@ -13,6 +13,7 @@
 <ul>
 	<li id="store"> Store </li>
 	<a href="../index.html"><li id="home"> Home </li></a>
+	<a href="../INFO/info.html"><li id="info"> Info </li></a>
 	<a href="../BLOG/blog.html"><li id="projects"> Blog </li>
 	<a href="../PROJECTS/projects.html"><li id="projects">Projects</li></a>
 </ul>
@@ -20,11 +21,11 @@
 
 <img src="images/BEHOLD.png" id="discord-image">
 <p id="discord-text"> For only <span style="color:rgb(21, 255, 0)">$5</span>, this could be yours. </p>
-<p id="discord-tag"> discord tag: <br><span style="color:red">anon_esophagus</span></p>
 
 
 
-<p id="fiverr" onclick="Fiverr()"> My Fiverr </p>
+
+
 
 
 
