--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 <ul>
 	<li id="home"> Home </li>
+	<a href="INFO/info.html"><li id="info">Info</li></a>
 	<a href="BLOG/blog.html"><li id="blog"> Blog </li></a>
 	<a href="PROJECTS/projects.html"><li id="projects"> Projects </li></a>
 	<a href="STORE/store.html"><li id="store"> Store </li></a>
