--- a/PROJECTS/projects.html
+++ b/PROJECTS/projects.html
@@ -14,6 +14,7 @@
 	<li id="projects"> Projects </li>
 	<a href="../BLOG/blog.html"><li id="blog"> Blog </li></a>
 	<a href="../index.html"><li id="home"> Home </li></a>
+	<a href="../INFO/info.html"><li id="info">Info</li></a>
 	<a href="../STORE/store.html"><li id="store">Store</li></a>
 </ul>
 
