--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <img src="images/so-me.png" id="bladerunner">
 <p id="bladerunner-text"> Please stop collecting mental illness's like they're something to be proud of </p>
 
-<img src="images/me.jpg" id="me">
+<img src="images/yoda.jpg" id="me">
 <p id="me-text"> I'm the one behind this shitpost </p>
 
 </body>
