--- a/PROJECTS/projects.html
+++ b/PROJECTS/projects.html
@@ -22,7 +22,7 @@
 
 <img src="clown.png" id="clown">
 <p id="sideshow-header"> SideShow </p>
-<p id="future-project"> (This project is canned, I might still use the same name for another project) </p>
+<p id="future-project"> (This project is canned)<br> I might still use the same name for another project</p>
 
 </body>
 </html>
